# m-browser

./: Cargo.toml  LICENSE  README.md  downloaded.wasm  index.html  m.js  m_bg.wasm
assets/: sw.js
pages/: SECOND_PAGE.md  THIRD_PAGE.md
src/: app.rs  egui_tools.rs  fill.rs  main.rs  wasm.rs  winit_wasi.rs
